--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body id="body">
 	<div class="container">
-		<div onclick="handelMove(0,0,80)" class="item">
+		<button onclick="handelMove(0,0,80)" class="item">
 			<svg class="item-svg" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M12.1601 10.87C12.0601 10.86 11.9401 10.86 11.8301 10.87C9.45006 10.79 7.56006 8.84 7.56006 6.44C7.56006 3.99 9.54006 2 12.0001 2C14.4501 2 16.4401 3.99 16.4401 6.44C16.4301 8.84 14.5401 10.79 12.1601 10.87Z"
@@ -20,8 +20,8 @@
 					stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
 			<span class="item-text">Profile</span>
-		</div>
-		<div onclick="handelMove(1,20,60)" class="item">
+		</button>
+		<button onclick="handelMove(1,20,60)" class="item">
 			<svg class="item-svg" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M21 7.16229C21 6.11871 21 5.59692 20.7169 5.20409C20.4337 4.81126 19.9387 4.64625 18.9487 4.31624L17.7839 3.92799C16.4168 3.47229 15.7333 3.24444 15.0451 3.3366C14.3569 3.42876 13.7574 3.82843 12.5583 4.62778L11.176 5.54937C10.2399 6.1734 9.77191 6.48541 9.24685 6.60952C9.05401 6.65511 8.85714 6.68147 8.6591 6.68823C8.11989 6.70665 7.58626 6.52877 6.51901 6.17302C5.12109 5.70705 4.42213 5.47406 3.89029 5.71066C3.70147 5.79466 3.53204 5.91678 3.39264 6.06935C3 6.49907 3 7.23584 3 8.70938V12.7736M21 11V15.2907C21 16.7642 21 17.501 20.6074 17.9307C20.468 18.0833 20.2985 18.2054 20.1097 18.2894C19.5779 18.526 18.8789 18.293 17.481 17.827C16.4137 17.4713 15.8801 17.2934 15.3409 17.3118C15.1429 17.3186 14.946 17.3449 14.7532 17.3905C14.2281 17.5146 13.7601 17.8266 12.824 18.4507L11.4417 19.3722C10.2426 20.1716 9.64311 20.5713 8.95493 20.6634C8.26674 20.7556 7.58319 20.5277 6.21609 20.072L5.05132 19.6838C4.06129 19.3538 3.56627 19.1888 3.28314 18.7959C3.01507 18.424 3.0008 17.9365 3.00004 17"
@@ -30,8 +30,8 @@
 				<path d="M9 20.5V17M9 7V13" stroke-width="1.5" stroke-linecap="round" />
 			</svg>
 			<span class="item-text">Map</span>
-		</div>
-		<div onclick="handelMove(2,40,40)" class="item">
+		</button>
+		<button onclick="handelMove(2,40,40)" class="item">
 			<svg class="item-svg item-svg-active" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M6 11.6825C9.31371 8.10583 14.6863 8.10583 18 11.6825M8.00002 13.841C10.2092 11.4566 13.7909 11.4566 16 13.841M10 16C11.1046 14.8078 12.8955 14.8078 14 16"
@@ -41,8 +41,8 @@
 					stroke-width="1.5" stroke-linecap="round" />
 			</svg>
 			<span class="item-text item-text-active">Home</span>
-		</div>
-		<div onclick="handelMove(3,60,20)" class="item">
+		</button>
+		<button onclick="handelMove(3,60,20)" class="item">
 			<svg class="item-svg" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M14 17.5C14 16.0955 14 15.3933 14.3371 14.8889C14.483 14.6705 14.6705 14.483 14.8889 14.3371C15.3933 14 16.0955 14 17.5 14V14V14C18.9045 14 19.6067 14 20.1111 14.3371C20.3295 14.483 20.517 14.6705 20.6629 14.8889C21 15.3933 21 16.0955 21 17.5V17.5V17.5C21 18.9045 21 19.6067 20.6629 20.1111C20.517 20.3295 20.3295 20.517 20.1111 20.6629C19.6067 21 18.9045 21 17.5 21V21V21C16.0955 21 15.3933 21 14.8889 20.6629C14.6705 20.517 14.483 20.3295 14.3371 20.1111C14 19.6067 14 18.9045 14 17.5V17.5V17.5Z"
@@ -57,15 +57,15 @@
 				<path d="M17.5 3V10"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
 			<span class="item-text">Apps</span>
-		</div>
-		<div onclick="handelMove(4,80,0)" class="item">
+		</button>
+		<button onclick="handelMove(4,80,0)" class="item">
 			<svg class="item-svg" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path
 					d="M16.6725 16.6412L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
 					stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
 			<span class="item-text">Search</span>
-		</div>
+		</button>
 		<div id="swimmer" class="swimmer" style="left: 40%;right: 40%;"></div>
 	</div>
 </body>
